[gd_scene load_steps=2 format=3 uid="uid://bkv7q2mhyx5ab"]

[ext_resource type="Script" path="res://src/entities/turret/Turret.gd" id="1_turret"]

[node name="Turret" type="Node2D"]
script = ExtResource("1_turret")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(1, 0.5, 0, 1)
scale = Vector2(0.8, 0.8)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -12.0
offset_top = -20.0
offset_right = 12.0
offset_bottom = -16.0
value = 100.0
show_percentage = false

[node name="RangeIndicator" type="ColorRect" parent="."]
visible = false
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
color = Color(1, 0.5, 0, 0.1)

[node name="HackProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -12.0
offset_top = -24.0
offset_right = 12.0
offset_bottom = -20.0
value = 0.0
show_percentage = false

[node name="AttackLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(1, 0.5, 0, 1)
